--- a/index.html
+++ b/index.html
@@ -3,42 +3,74 @@
     <head>
         <title>Roasted</title>
         <!-- STYLE -->
-        <link href="./src/Roasted.min.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&amp;display=swap" rel="stylesheet">
+        <link href="./src/Watch.min.css" rel="stylesheet">
     </head>
     <body>
-        <div id="screen">
-            <div class="quarter">
-                <div class="before">
-                    <div class="hours"></div>
+        <div id="watch"><img src="https://raw.githubusercontent.com/HeyHeyChicken/Watch/main/resources/empty.png"/>
+            <div id="screen">
+                <div class="quarter">
+                    <div class="before">
+                        <div class="hours"></div>
+                    </div>
+                    <div class="after">
+                        <div class="hours"></div>
+                    </div>
                 </div>
-                <div class="after">
-                    <div class="hours"></div>
+                <div class="quarter">
+                    <div class="before">
+                        <div class="hours"></div>
+                    </div>
+                    <div class="after">
+                        <div class="hours"></div>
+                    </div>
                 </div>
-            </div>
-            <div class="quarter">
-                <div class="before">
-                    <div class="hours"></div>
+                <div class="quarter">
+                    <div class="before">
+                        <div class="minutes"></div>
+                    </div>
+                    <div class="after">
+                        <div class="minutes"></div>
+                    </div>
                 </div>
-                <div class="after">
-                    <div class="hours"></div>
-                </div>
-            </div>
-            <div class="quarter">
-                <div class="before">
-                    <div class="minutes"></div>
-                </div>
-                <div class="after">
-                    <div class="minutes"></div>
-                </div>
-            </div>
-            <div class="quarter">
-                <div class="before">
-                    <div class="minutes"></div>
-                </div>
-                <div class="after">
-                    <div class="minutes"></div>
+                <div class="quarter">
+                    <div class="before">
+                        <div class="minutes"></div>
+                    </div>
+                    <div class="after">
+                        <div class="minutes"></div>
+                    </div>
                 </div>
             </div>
         </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script>
+            const SCREEN = $("#screen");
+            const QUARTER_1 = SCREEN.find("> .quarter:nth-child(1)");
+            const QUARTER_2 = SCREEN.find("> .quarter:nth-child(2)");
+            const QUARTER_3 = SCREEN.find("> .quarter:nth-child(3)");
+            const QUARTER_4 = SCREEN.find("> .quarter:nth-child(4)");
+
+            const INTERVAL = setInterval(function(){
+                const DATE = new Date();
+                const HOUR = DATE.getHours() < 10 ? "0" + DATE.getHours() : "" + DATE.getHours();
+                const MINUTE = DATE.getMinutes() < 10 ? "0" + DATE.getMinutes() : "" + DATE.getMinutes();
+                const CN = "reverse";
+
+                SCREEN.attr("seconds", DATE.getSeconds());
+
+                if(DATE.getMinutes() %2 == 0){
+                    SCREEN.addClass(CN);
+                }
+                else{
+                    SCREEN.removeClass(CN);
+                }
+
+                QUARTER_1.find(".hours").html(HOUR[0]);
+                QUARTER_2.find(".hours").html(HOUR[1]);
+                QUARTER_3.find(".minutes").html(MINUTE[0]);
+                QUARTER_4.find(".minutes").html(MINUTE[1]);
+            },1000);
+        </script>
     </body>
 </html>
